{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerActionMap",
            "id": "0e81af76-e375-4386-b74c-6c87d2aef96e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "9a9d522c-768f-48d7-b9e0-8c7def967ebe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "82fefbdb-01c8-4344-bb86-8319c3974550",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "8c5f40ec-a7a0-44e4-a3ab-885a144ed1a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "e50f4c0c-53a0-48e5-990c-ae1e36019e64",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "ef8b9070-ac03-4e32-9bb6-ba3f57c4a8af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "940a47a6-9927-4ca9-825d-46a09be6939e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "6eb08602-db7e-4aad-9c48-87d12f48b7e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "bc57097c-6780-449d-a717-7390b55b84db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Direction",
                    "id": "459f086b-beae-4e1a-801d-a35baaa9d477",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "97a7e5aa-631f-47fa-ab8a-c41b238c4d35",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a5be2c2c-8a19-448b-8111-7e5fb2caaa4c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e37c6740-a0cb-4302-b7f0-a858aebb69c7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8d8eb8c4-b892-4f00-9720-6b406b8fdad4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "74b5d70d-b551-40b9-a3b3-9b6514ba097c",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0153179-c737-4a1d-8c3d-4d8fbe93634d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8f1e612-4d25-45a3-9d86-8a725685f058",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8fd12c5-fc6d-4752-9f20-49fb45bbb793",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60c855be-3895-43cc-92da-9e532eddb0e0",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1db3367-50bb-4965-b613-6d3c9e8edf5a",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01525438-efb4-46e2-8378-fa619e7b685a",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PauseActionMap",
            "id": "e47af976-bf07-4988-ada4-7eb853abaff3",
            "actions": [
                {
                    "name": "UnPauseGame",
                    "type": "Button",
                    "id": "cfeab762-c976-42d8-a65c-deb0a9625a71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "304d3ab6-d04f-436f-a760-4c7b9a9be215",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "28c3c554-fb22-45fb-8a21-1dfe6290c701",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnPauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9e3ed94-5e96-4e75-8720-2db45101f3dc",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}